@@ -43,6 +43,13 @@ audio::-webkit-media-controls-play-button, video::-webkit-media-controls-play-bu
 }
 
 audio::-webkit-media-controls-time-display, video::-webkit-media-controls-time-display {
+    /* Since MediaControlElements are always created with a renderer we have to hide
+       the controls we don't use, so they don't mess up activation and event handling */
+    left: 0px;
+    top: 0px;
+    width: 0px;
+    height: 0px;
+
     display: none;
 }
 
@@ -55,14 +62,35 @@ audio::-webkit-media-controls-timeline, video::-webkit-media-controls-timeline {
 }
 
 audio::-webkit-media-controls-seek-back-button, video::-webkit-media-controls-seek-back-button {
-     display: none;
+    /* Since MediaControlElements are always created with a renderer we have to hide
+       the controls we don't use, so they don't mess up activation and event handling */
+    left: 0px;
+    top: 0px;
+    width: 0px;
+    height: 0px;
+
+    display: none;
 }
 
 audio::-webkit-media-controls-seek-forward-button, video::-webkit-media-controls-seek-forward-button {
-     display: none;
+    /* Since MediaControlElements are always created with a renderer we have to hide
+       the controls we don't use, so they don't mess up activation and event handling */
+    left: 0px;
+    top: 0px;
+    width: 0px;
+    height: 0px;
+
+    display: none;
 }
 
 audio::-webkit-media-controls-fullscreen-button, video::-webkit-media-controls-fullscreen-button {
+    /* Since MediaControlElements are always created with a renderer we have to hide
+       the controls we don't use, so they don't mess up activation and event handling */
+    left: 0px;
+    top: 0px;
+    width: 0px;
+    height: 0px;
+
     display: none;
 }
 
